--- a/tmp-backend/package.json
+++ b/tmp-backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "vercel-build": "npm run build"   
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
