--- a/tmp-backend/package.json
+++ b/tmp-backend/package.json
@@ -1,12 +1,11 @@
 {
   "name": "tmp-backend",
-  "version": "1.0.0",
+  "version": "1.0.0", 
   "private": true,
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js",
-    "vercel-build": "echo \"no build step for vercel\""
+    "dev": "node --watch server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -16,7 +15,6 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "serverless-http": "^3.2.0"
+    "morgan": "^1.10.0"
   }
 }
