--- a/tmp-backend/package.json
+++ b/tmp-backend/package.json
@@ -1,20 +1,15 @@
 {
   "name": "tmp-backend",
-  "version": "1.0.0", 
-  "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "dev": "node server.js",
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "vercel-build": "echo 'No build step required'"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.7",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "express": "^4.19.2"
   }
 }
